Small UI fixes: - No min-height for the logo, so no stretching of the logo - Remove padding for validation messages in column - More rounded corners for buttons

--- a/less/gn_editor_dutch.less
+++ b/less/gn_editor_dutch.less
@@ -268,6 +268,14 @@
         }
       }
     }
+    div[class*="col-sm-"] {
+      .gn-validation-report {
+        .list-group-item {
+          margin-left: 0;
+          margin-right: 0;
+        }
+      }
+    }
   }
 
 }
@@ -529,6 +537,18 @@
         margin-right: 0;
       }
     }
+  }
+}
+
+// map panel
+.gn-drawmap-panel {
+  .col-md-9 {
+    padding-right: 0;
+    width: 70%;
+  }
+  .col-md-3 {
+    padding-left: 0;
+    width: 30%;
   }
 }
 
