--- a/less/gn_navbar_dutch.less
+++ b/less/gn_navbar_dutch.less
@@ -166,7 +166,7 @@
   }
   // smaller logo on smaller screens
   .branding .gn-logo {
-    min-height: auto !important;
+    min-height: none !important;
     max-height: 70px !important;
     margin-top: 15px !important;
   }
