--- a/less/gn_variables_dutch.less
+++ b/less/gn_variables_dutch.less
@@ -18,7 +18,7 @@
 @ro-gray-7: #535353;
 
 // general
-@gn-border-radius: 4px;
+@gn-border-radius: 3px;
 
 // body background (image & color)
 //
