--- a/less/gn_view_dutch.less
+++ b/less/gn_view_dutch.less
@@ -5,9 +5,9 @@
 @import "gn_variables_dutch.less"; // must be last
 
 @gnSpacing: 10px;
-@border-radius-large: 2px;
-@border-radius-base: 2px;
-@border-radius-small: 2px;
+@border-radius-large: 4px;
+@border-radius-base: 3px;
+@border-radius-small: 3px;
 
 // background
 @body-bg: #f3f3f3;
@@ -25,8 +25,9 @@
   min-height: 80px;
   background-color:white;
   .gn-logo {
-    min-height: 70px;
-    max-height: none; // reset height
+    min-height: none;
+    max-height: none;
+    margin: 0;
   }
 }
 
